--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@
 @media (prefers-color-scheme: light) {
   :root {
     background-color: #ffffff;
+    color: #213547;
   }
   button {
     background-color: #f9f9f9;
