--- a/src/style.css
+++ b/src/style.css
@@ -15,8 +15,8 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    background-color: #ffffff;
-    color: #213547;
+    background-color:rgb(96, 168, 157);
+    color:rgb(255, 255, 255);
   }
   button {
     background-color: #f9f9f9;
